# uri-punisher

./: .env.template  .gitignore  AGENTS.md  README.md  pyproject.toml
src/uri_punisher/: __init__.py  __main__.py  abuseipdb.py  cli.py  mastodon.py  parsing.py  policy.py  service.py  settings.py  state.py
tests/uri_punisher_tests/: test_mastodon.py  test_parsing.py  test_policy.py  test_service.py
